--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "sveltekit-vite-tailwind",
+	"name": "frontana",
 	"version": "0.0.1",
 	"scripts": {
 		"dev": "svelte-kit dev",
@@ -14,6 +14,7 @@
 		"postcss": "^8.4.4",
 		"postcss-load-config": "^3.1.0",
 		"svelte": "^3.44.2",
+		"svelte-loading-spinners": "^0.1.7",
 		"svelte-preprocess": "^4.9.8",
 		"tailwindcss": "^3.0.0",
 		"vite": "^2.7.1"
@@ -21,5 +22,8 @@
 	"type": "module",
 	"engines": {
 		"node": ">= 12.17.0"
+	},
+	"dependencies": {
+		"axios": "^0.24.0"
 	}
 }
