--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"svelte": "^3.44.2",
 		"svelte-loading-spinners": "^0.1.7",
 		"svelte-preprocess": "^4.9.8",
+		"svelte-select": "^4.4.6",
 		"tailwindcss": "^3.0.0",
 		"vite": "^2.7.1"
 	},
